--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DB_URL=mongodb+srv://marali23_db_user:cwwC51F2Azf3N7cN@cluster0.mkfvndr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CLOUD_NAME=dmfekrd9l
+API_KEY=917964847648816
+API_SECRET=IlRLqDoC06MUJfKSTNWHW4kXPPU
